--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
+  <router-outlet></router-outlet>
+</div>
+<div class="container">
   <div class="row">
     <div class="col-sm">
       One of three columns
@@ -13,4 +16,3 @@
   </div>
 </div>
 
-<router-outlet></router-outlet>
