--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-navbar></app-navbar>
 <div class="container">
   <router-outlet></router-outlet>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-  </div>
 </div>
 
