--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,3 +1,36 @@
-<p>
-  users works!
-</p>
+<div class="row">
+	<div class="col-md-6">
+		<h2><i class="fa fa-users"></i> User Info</h2>
+	</div>
+	<div class="col-md-6 text-right">
+		<h5 class="pull-right text-muted">Total Owned: {{totalOwned + " RMB"}}</h5>
+	</div>
+</div>
+
+<table *ngIf="users?.length>0;else noUsers" class="table table-striped">
+	<thead>
+		<th>ID</th>
+		<th>Name</th>
+		<th>Email</th>
+		<th>Phone</th>
+		<th>Owned</th>
+		<th></th>
+	</thead>
+	<tbody>
+		<tr *ngFor="let user of users">
+			<td>{{user.id}}</td>
+			<td>{{user.name}}</td>
+			<td>{{user.email}}</td>
+			<td>{{user.phone}}</td>
+			<td>{{user.balance + " RMB"}}</td>
+			<td><a [routerLink]="['/user/'+user.id]" href="#" class="btn btn-secondary btn-sm">
+			 <i class="fa fa-arrow-circle-o-right"></i> Details</a>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+<ng-template #noUsers>
+	<hr>
+	<h5>There are no users in the system yet.</h5>
+</ng-template>
