--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -1,3 +1,33 @@
-<p>
-  add-user works!
-</p>
+<div class="row">
+  <div class="col-md-12">
+    <a routerLink="/" class="btn btn-link">
+      <i class="fa fa-arrow-circle-o-left"></i> Homepage
+    </a>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Add User
+  </div>
+  <div class="card-block">
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" [(ngModel)]="user.name" name="name" minlength="2" required="">
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text" class="form-control" [(ngModel)]="user.email" name="email" minlength="2" required>
+      </div>
+      <div class="form-group">
+        <label for="phone">Phone</label>
+        <input type="text" class="form-control" [(ngModel)]="user.phone" name="phone" minlength="11" required>
+      </div>
+      <div class="form-group">
+        <label for="balance">Balance</label>
+        <input type="text" class="form-control" [(ngModel)]="user.balance" name="balance" [disabled]="disableBalanceOnAdd">
+      </div>
+      <input type="submit" value="Add" class="btn btn-primary btn-block">
+    </form>
+  </div>
+</div>
