--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,9 @@
-<p>
-  home works!
-</p>
-<app-users></app-users>
+<br><br>
+<div class="row">
+  <div class="col-md-10">
+    <app-users></app-users>
+  </div>
+  <div class="col-md-2">
+    <app-sidebar></app-sidebar>
+  </div>
+</div>
