--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,3 @@
-<p>
-  sidebar works!
-</p>
+<a routerLink="/add-user" class="btn btn-success btn-block">
+<i class="fa fa-plus"></i> Add User
+</a>
