--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -10,7 +10,7 @@
     Add User
   </div>
   <div class="card-block">
-    <form (ngSubmit)="onSubmit()">
+    <form #f="ngForm" (ngSubmit)="onSubmit(f)">
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" [(ngModel)]="user.name" name="name" minlength="2" required="">
