Update user detail page.

--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -1,3 +1,36 @@
-<p>
-  user-detail works!
-</p>
+<div class="row">
+  <div class="col-md-6">
+    <a routerLink="/" class="btn btn-link">
+      <i class="fa fa-arrow-circle-o-left"></i>
+      Home
+    </a>
+  </div>
+  <div class="col-md-6">
+    <div class="btn-group pull-right">
+      <a href="#" class="btn btn-secondary">Edit</a>
+      <button class="btn btn-danger">Delete</button>
+    </div>
+  </div>
+</div>
+<div *ngIf="user" class="card">
+  <h3 class="card-header">
+    {{ user.name }}
+  </h3>
+  <div class="card-block">
+    <div class="row">
+      <div class="col-md-8">
+        <h4>User ID: {{id}}</h4>
+      </div>
+      <div class="col-md-4">
+      </div>
+    </div>
+  </div>
+  <div class="list-group">
+    <div class="list-group-item">
+      Email: {{ user.email }}
+    </div>
+    <div class="list-group-item">
+      Phone: {{ user.phone }}
+    </div>
+  </div>
+</div>
