--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -23,7 +23,7 @@
 			<td>{{user.email}}</td>
 			<td>{{user.phone}}</td>
 			<td>{{user.balance + " RMB"}}</td>
-			<td><a [routerLink]="['/user/'+user.id]" href="#" class="btn btn-secondary btn-sm">
+			<td><a [routerLink]="['/user/'+user.id]" class="btn btn-secondary btn-sm">
 			 <i class="fa fa-arrow-circle-o-right"></i> Details</a>
 			</td>
 		</tr>
