--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <a routerLink="/" class="btn btn-link">
-      <i class="fa fa-arrow-circle-o-left"></i> Homepage
+      <i class="fa fa-arrow-circle-o-left"></i> Home
     </a>
   </div>
 </div>
