--- a/src/app/components/user-detail/user-detail.component.scss
+++ b/src/app/components/user-detail/user-detail.component.scss
@@ -1,3 +1,9 @@
 .card-block {
     padding:.75rem 1.25rem;
+    .form-group {
+        margin-bottom: 0;
+    }
+    .form-inline {
+        clear: both;
+    }
 }
